<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/btnmenu_shopping_cart"
        android:enabled="true"
        android:icon="@drawable/ic_action_add_shopping_cart"
        android:title="@string/btnmenu_shopping_cart"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/btnmenu_mail"
        android:enabled="true"
        android:icon="@drawable/ic_action_mail"
        android:title="@string/btnmenu_mail"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/btnmenu_replay"
        android:enabled="true"
        android:icon="@drawable/ic_action_replay"
        android:title="@string/btnmenu_replay"
        app:showAsAction="ifRoom" />
</menu>